--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	<!-- MessageBroker Servlet -->
     <servlet>
         <servlet-name>MessageBrokerServlet</servlet-name>
-        <display-name>MessageBrokerServlet</display-name>
         <servlet-class>flex.messaging.MessageBrokerServlet</servlet-class>
         <init-param>
             <param-name>services.configuration.file</param-name>
@@ -26,5 +25,9 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         <servlet-name>MessageBrokerServlet</servlet-name>
         <url-pattern>/messagebroker/*</url-pattern>
     </servlet-mapping>
+    
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 	
 </web-app>
